# Trivent

./: Build  CMakeLists.txt  Compile  Configure  README  Trivent.i  run_trivent_local.sh
DifGeom/: Slot1_39_Geom.txt  mapping_cosmic.txt  mapping_desy.txt  mapping_ps.txt
EventBuilder/: CMakeLists.txt
EventBuilder/include/: DIFSlowControl.h  DIFUnpacker.h  GainCorrect.h  HistogramHendler.h  Mapping.h  SDHCAL_RawData_Processor.h  TriventProc.hh
EventBuilder/src/: DIFSlowControl.cc  DIFUnpacker.cc  GainCorrect.cc  HistogramHandler.cc  SDHCAL_RawData_Processor.cc  TriventProc.cc
PyTrivent/: README
SDHCALReco/: CMakeLists.txt
SDHCALReco/include/: TCaloHitRoot.hh  TRawCaloHitRoot.hh  rootMaker.hh
SDHCALReco/src/: TCaloHitRoot.cc  TRawCaloHitRoot.cc  rootMaker.cc
doc/: CMakeLists.txt  Doxyfile
doc/html/: DIFUnpacker_8cc_source.html  GainCorrect_8cc_source.html  HistogramHendler_8h_source.html  SDHCAL__RawData__Processor_8h_source.html  TriventProc_8cc_source.html  annotated.html  classCollTree-members.html  classDIFPtr-members.html  classDIFSlowControl.html  classDIFUnpacker-members.html  classDIFUnpacker.html  classGainCorrect.html  classHistDefTH1F-members.html  classHistDefTProf-members.html  classHistDefTProf.html  classLMGeneric-members.html  classLMGeneric.html  classSDHCAL__RawBuffer__Navigator-members.html  classSDHCAL__RawData__Processor-members.html  classSDHCAL__RawData__Processor.html  classes.html  dir_c35022d707df707fac4f019dcec2e375.html  dir_c9e8b6481212bff52b0f375d541b1b09.html  dir_ed0932e57016a2b3f5a418b2c69e948a.html  functions.html  functions_func.html  index.html  structGainHist-members.html  structLayerID-members.html  structLayerID.html
script/: build.sh
sendjob/: LCIO.xml  LCIO_suite.xml  carefulDownload.sh  carefulUpload.sh  cosmic_trivent_grid.sh  getfile.py  getfile.py~  read_list_files.py  read_list_files.py~  removeSteer.sh  runMokka_siLayers.sh  runMokka_siLayers.sh~  runPID_v01.sh  run_trivent_grid.sh  run_trivent_grid.sh.old  run_trivent_grid.sh~  submitMokka_silayers.py  submitPID_v01.py  submitPID_v01.py~  submit_trivent_grid.py  submit_trivent_grid.py.old  submit_trivent_grid.py~
steer/: LCIO_runProcess.xml  LCIO_streamout_trivent_runProcess.xml  ROOT_runProcess.xml  streamout.xml
